--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ set(THIS WMSim)
 
 project(${THIS})
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-fno-omit-frame-pointer")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-std=c++17 -fno-omit-frame-pointer")
+set(CMAKE_CXX_FLAGS "-std=c++17")
 
 # sqlite--------------------------------------------------------------------------------------------
 ExternalProject_Add (sqlite
@@ -34,8 +34,8 @@ set(DAT_INCLUDE_DIR database/include)
 set(SIM_INCLUDE_DIR simulator/include)
 set(VIS_INCLUDE_DIR visualization/include)
 
-set(TBB_INCLUDE_DIR /opt/intel/compilers_and_libraries_2018.3.222/linux/tbb/include)
-set(TBB_LIBRARY_DIR /opt/intel/compilers_and_libraries_2018.3.222/linux/tbb/lib/intel64_lin/gcc4.7)
+set(TBB_INCLUDE_DIR /opt/intel/compilers_and_libraries_2017.4.196/linux/tbb/include)
+set(TBB_LIBRARY_DIR /opt/intel/compilers_and_libraries_2017.4.196/linux/tbb/lib/intel64_lin/gcc4.7)
 
 file(GLOB_RECURSE HEADERS
         ${INCLUDE_DIR}/*.h
